<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="udemy.java.atm_consulta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="udemy.java.atm_consulta.ui.customers.CustomersFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="udemy.java.atm_consulta.ui.services.ServicesFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="udemy.java.atm_consulta.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />

    <fragment
        android:id="@+id/nav_info"
        android:name="udemy.java.atm_consulta.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

</navigation>