<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_baseline_customers"
            android:title="@string/menu_customers" />
    </group>

        <item android:title="Entre em contacto">
            <menu>
                    <item
                        android:id="@+id/nav_contact"
                        android:icon="@drawable/ic_baseline_contact"
                        android:title="Contacto" />
                    <item
                        android:id="@+id/nav_info"
                        android:icon="@drawable/ic_baseline_info"
                        android:title="Sobre" />
            </menu>
        </item>
</menu>